# vidbridge

./: .gitignore  CMakeLists.txt  README.md
include/: internal.h  video_wrapper.h
rust/: Cargo.toml  build.rs
rust/src/: async_decoder.rs  async_demuxer.rs  async_encoder.rs  async_muxer.rs  decoder.c  decoder.rs  demuxer.rs  encoder.rs  frame.rs  frame_utils.c  lib.rs  muxer.c  muxer.rs
rust/tests/: pipeline_test.rs
src/: common.c  demuxer.c  encoder.c
tests/: test_pipeline.c
